--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <title>PWA Edit</title>
     <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" href="/images/icons/apple-touch.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/images/icons/apple-touch.png" />
     <link rel="stylesheet" href="/css/style.css" />
     <script type="module" src="/js/main.js"></script>
   </head>
